--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "presite": "npm run version",
     "color-less": "node ./scripts/generate-color-less",
     "compile": "antd-tools run compile",
-    "compile:less": "antd-tools run compile:less",
     "changelog": "node ./scripts/print-changelog",
     "predeploy": "antd-tools run clean && npm run site && cp CNAME _site && cp -r .circleci _site && npm run site:test",
     "deploy": "bisheng gh-pages --push-only --dotfiles",
@@ -90,7 +89,7 @@
     "test-node": "jest --config .jest.node.js --cache=false",
     "tsc": "tsc --noEmit",
     "site:test": "jest --config .jest.site.js --cache=false",
-    "test-image": "npm run compile:less && docker-compose run tests",
+    "test-image": "npm run dist && docker-compose run tests",
     "version": "node ./scripts/generate-version"
   },
   "husky": {
@@ -155,7 +154,7 @@
   "devDependencies": {
     "@ant-design/bisheng-plugin": "^2.3.0",
     "@ant-design/hitu": "^0.0.0-alpha.13",
-    "@ant-design/tools": "^10.0.1",
+    "@ant-design/tools": "^14.0.0-alpha.3",
     "@qixian.cs/github-contributors-list": "^1.0.3",
     "@stackblitz/sdk": "^1.3.0",
     "@types/classnames": "^2.2.8",
@@ -295,7 +294,7 @@
   "bundlesize": [
     {
       "path": "./dist/antd.min.js",
-      "maxSize": "280 kB"
+      "maxSize": "275 kB"
     },
     {
       "path": "./dist/antd.min.css",
@@ -307,6 +306,10 @@
     },
     {
       "path": "./dist/antd.compact.min.css",
+      "maxSize": "65 kB"
+    },
+    {
+      "path": "./dist/antd.variable.min.css",
       "maxSize": "65 kB"
     }
   ],
