--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "deploy": "bisheng gh-pages --push-only --dotfiles",
     "deploy:china-mirror": "git checkout gh-pages && git pull origin gh-pages && git push git@gitee.com:ant-design/ant-design.git gh-pages",
     "dist": "antd-tools run dist",
+    "dist:esbuild": "ESBUILD=true npm run dist",
     "lint": "npm run tsc && npm run lint:script && npm run lint:demo && npm run lint:style && npm run lint:deps && npm run lint:md",
     "lint-fix": "npm run lint-fix:script && npm run lint-fix:demo && npm run lint-fix:style",
     "lint-fix:demo": "eslint-tinker ./components/*/demo/*.md",
@@ -109,6 +110,7 @@
     "@ant-design/icons": "^4.2.1",
     "@ant-design/react-slick": "~0.27.0",
     "@babel/runtime": "^7.11.2",
+    "@ctrl/tinycolor": "^3.4.0",
     "array-tree-filter": "^2.1.0",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.2.0",
@@ -154,7 +156,7 @@
   "devDependencies": {
     "@ant-design/bisheng-plugin": "^2.3.0",
     "@ant-design/hitu": "^0.0.0-alpha.13",
-    "@ant-design/tools": "^14.0.0-alpha.3",
+    "@ant-design/tools": "^14.0.0-alpha.2",
     "@qixian.cs/github-contributors-list": "^1.0.3",
     "@stackblitz/sdk": "^1.3.0",
     "@types/classnames": "^2.2.8",
@@ -191,10 +193,12 @@
     "css-split-webpack-plugin": "^0.2.6",
     "dekko": "^0.2.1",
     "docsearch.js": "^2.6.3",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "enquire-js": "^0.2.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.6.0",
+    "esbuild-loader": "^2.13.1",
     "esbuild-webpack-plugin": "^1.0.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.0.0",
