--- a/package.json
+++ b/package.json
@@ -256,7 +256,7 @@
     "react-helmet-async": "^1.0.4",
     "react-highlight-words": "^0.16.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-intl": "^5.3.0",
+    "react-intl": "5.3.0",
     "react-resizable": "^2.0.0",
     "react-router-dom": "^5.0.1",
     "react-sortable-hoc": "^1.11.0",
@@ -281,7 +281,7 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
     "stylelint-order": "^4.0.0",
     "theme-switcher": "^1.0.2",
-    "typescript": "~4.5.0",
+    "typescript": "~4.0.0",
     "webpack-bundle-analyzer": "^3.6.0",
     "xhr-mock": "^2.4.1",
     "xhr2": "^0.2.0",
