--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
     "@ant-design/hitu": "^0.0.0-alpha.13",
     "@ant-design/tools": "^10.0.1",
     "@qixian.cs/github-contributors-list": "^1.0.3",
-    "@stackblitz/sdk": "^1.3.0",
+    "@stackblitz/sdk": "1.3.0",
     "@types/classnames": "^2.2.8",
     "@types/enzyme": "^3.10.5",
     "@types/gtag.js": "^0.0.3",
