--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antd",
-  "version": "4.7.0-fix-dropdown-v1",
+  "version": "4.7.0-fix-dropdown-v2",
   "description": "An enterprise-class UI design language and React components implementation",
   "title": "Ant Design",
   "keywords": [
@@ -132,7 +132,7 @@
     "rc-motion": "2.3.2",
     "rc-notification": "4.5.2",
     "rc-pagination": "3.1.0",
-    "rc-picker": "2.3.1",
+    "rc-picker": "^2.6.9",
     "rc-progress": "3.1.0",
     "rc-rate": "~2.8.2",
     "rc-resize-observer": "0.2.5",
@@ -143,10 +143,10 @@
     "rc-table": "7.10.2",
     "rc-tabs": "~11.6.0",
     "rc-textarea": "0.3.0",
-    "rc-tooltip": "~5.0.0",
+    "rc-tooltip": "^5.3.1",
     "rc-tree": "~3.10.0",
     "rc-tree-select": "4.1.2",
-    "rc-trigger": "5.0.7",
+    "rc-trigger": "^5.3.4",
     "rc-upload": "3.3.1",
     "rc-util": "^5.1.0",
     "scroll-into-view-if-needed": "2.2.26",
